--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1"
-         xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
 
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
@@ -18,7 +19,23 @@
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
 
+    <error-page>
+        <exception-type>app.common.exception.PageNotFoundException</exception-type>
+        <location>/WEB-INF/error-page/not-found.html</location>
+    </error-page>
+
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
+
+    <data-source>
+        <name>java:app/app-ds</name>
+        <class-name>org.apache.derby.jdbc.EmbeddedDataSource</class-name>
+        <database-name>app</database-name>
+        <property>
+            <name>connectionAttributes</name>
+            <value>;create=true</value>
+        </property>
+        <transactional>true</transactional>
+    </data-source>
 </web-app>
