--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.5'
     compile 'ch.qos.logback:logback-classic:1.1.7'
     compile 'org.flywaydb:flyway-core:4.0.3'
+    compile 'org.apache.commons:commons-email:1.4'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:3.5.2'
