再デプロイ時にセッションを保持するように変更

--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,5 @@ task deploy(type: Exec, dependsOn: war) {
     def payaraHome = System.env.PAYARA_HOME
     def asadmin = /$payaraHome\bin\asadmin.bat/
 
-    commandLine('cmd', '/C', asadmin, 'deploy', '--force=true', war.archivePath)
+    commandLine('cmd', '/C', asadmin, 'redeploy', '--name', war.baseName, '--keepstate=true', war.archivePath)
 }
