Password の Hash 化ができるページを追加

--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,13 @@ task deploy(type: Exec, dependsOn: war) {
     def payaraHome = System.env.PAYARA_HOME
     def asadmin = /$payaraHome\bin\asadmin.bat/
 
+    commandLine('cmd', '/C', asadmin, 'deploy', war.archivePath)
+}
+
+
+task redeploy(type: Exec, dependsOn: war) {
+    def payaraHome = System.env.PAYARA_HOME
+    def asadmin = /$payaraHome\bin\asadmin.bat/
+
     commandLine('cmd', '/C', asadmin, 'redeploy', '--name', war.baseName, '--keepstate=true', war.archivePath)
 }
